# backend-ml-obesity

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-fluxo.md  README.md  compose.yaml  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  domain_catalog.py  extensions.py
app/api/: __init__.py  domain_routes.py  errors.py  health_routes.py  middleware.py  obesity_record_routes.py
app/ml/: __init__.py  feature_transformer.py  model_loader.py  predictor.py
app/models/: __init__.py  domain.py  obesity_record.py
app/repositories/: __init__.py  domain_repository.py  obesity_record_repository.py
app/schemas/: __init__.py  domain_schema.py  fields.py  obesity_record_schema.py  problem_schema.py
app/services/: __init__.py  domain_service.py  obesity_record_service.py
artifacts/: hgb.joblib  hgb.manifest.json
docs/adr/: 0001-water-labels.md
migrations/: env.py
migrations/versions/: 20260703_0001_initial_schema.py  20260713_0002_add_scc_smoke.py  20260714_0003_add_scc_smoke_domains.py  script.sql
scripts/: generate_model_manifest.py  verify_model_artifact.py
seeds/: __init__.py  domain_options.py
spec-to-development/: implementacao-sdd.md  plano-implementacao-machine-learning-core.md  plano-implementacao.md  refinamento-funcional.md  refinamento-machine-learning-core.md  refinamento-tecnico.md  specs-sdd.md
spec-to-development/agents/: 00-orquestrador-planejamento.md  01-planejador-backend-flask.md  02-planejador-dados-postgresql.md  03-planejador-plataforma-observabilidade.md  04-planejador-qa-testes.md  (+4 more)
(+9 files in other folders)
