[build-system]
requires = ["setuptools==81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obesity-data-api"
version = "0.1.0"
description = "Flask API for obesity form data"
requires-python = ">=3.10,<3.11"
dependencies = [
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "SQLAlchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]==3.3.4",
    "flask-smorest==0.47.0",
    "marshmallow==3.26.2",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==6.3.0",
    "coverage[toml]==7.15.0",
    "ruff==0.15.20",
    "mypy==1.20.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
